# ludium-world-payment

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  PRODUCTION.md  README.md  config.toml  diesel.toml  docker-compose.development.yml  docker-compose.local.yml  docker-compose.localdb.yml
docker-compose/: .dockerignore  Dockerfile  README.md  development.yml  local.yml  production.yml
scripts/dev_initial/: 00-recreate-db.sql  01-create-schema.sql  02-add-coin-and-network.sql  02-dev-seed.sql  03-add-coin-and-network.sql  03-add-reward-claim.sql  04-add-detailed-posting.sql  04-dev-seed.sql  04-dev-seed2.sql  05-add-reward-claim.sql  05-update-reward-claim.sql  06-dev-seed2.sql  09-dev-seed.sql
src/: main.rs  state.rs
src/adapter/input/: ctx.rs  error.rs  mod.rs  response.rs
src/adapter/input/web/: _dev_routes_login.rs  _dev_routes_user.rs  mod.rs  routes_coin.rs  routes_coin_network.rs  routes_hello.rs  routes_login.rs  routes_network.rs  routes_reward_claim.rs  routes_user.rs
src/adapter/input/web/middleware/: auth.rs  mod.rs  permission.rs  response.rs
src/adapter/output/: mod.rs
src/adapter/output/near/: error.rs  mod.rs  rpc_client.rs
src/adapter/output/persistence/db/: error.rs  mod.rs  schema.rs
src/adapter/output/persistence/db/_dev_utils/: dev_db.rs  mod.rs
src/adapter/output/persistence/db/postgres/: coin_network_repository_impl.rs  coin_repository_impl.rs  detailed_posting_repository_impl.rs  mission_repository_impl.rs  mod.rs  network_repository_impl.rs  reward_claim_repository_impl.rs  user_repository_impl.rs
src/config/: log.rs  mod.rs  near.rs  swagger.rs
src/domain/model/: base.rs  coin.rs  coin_network.rs  detailed_posting.rs  error.rs  mission.rs  mission_submit.rs  mod.rs  near.rs  network.rs  reward_claim.rs  reward_claim_detail.rs  user.rs
src/port/output/: coin_network_repository.rs  coin_repository.rs  db_manager.rs  detailed_posting_repository.rs  mission_submit_repository.rs  mod.rs  network_repository.rs  reward_claim_repository.rs  rpc_client.rs  user_repository.rs
src/usecase/: _dev_process_meta_tx.rs  error.rs  mod.rs  near_usecase_impl.rs  process_meta_tx.rs  reward_claim_usecase_impl.rs  utrait.rs
src/usecase/utrait/: near_usecase.rs  reward_claim_usecase.rs
tests/: concurrency_test.rs  quick_dev.rs
